1999-03-02  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gmem.c: Fixed a stupid cut'n'paste error of mine. Thanks to
	Friedrich Dominicus <Friedrich.Dominicus@inka.de>

1999-03-01  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

        * gutils.c (g_get_any_init): Fixed yet another bloody
        implementation of getpwuid_r on AIX. Thanks to Olaf Dietsche
        <olaf.dietsche+list.gtk@netcologne.de>. I would like a configure
        test better than that, but have no idea, how to do that easily.

Sun Feb 21 22:11:51 CST 1999  Shawn T. Amundson <amundson@gtk.org>

	* Released GLib 1.2.0

	* AUTHORS: updated

Wed Feb 24 00:08:42 CST 1999 Shawn T. Amundson <amundson@gtk.org>

	* *.[ch]: inserted additional note to look for ChangeLog and
	  AUTHORS file for a log of modifications.

Sun Feb 21 14:01:00 1999  Dr Mike <drmike@redhat.com>

	* Made specfile generated, tweaked slightly
	
Thu Feb 18 08:24:12 1999  Tim Janik  <timj@gtk.org>

	* gmem.c (g_realloc): plugged a memory leak, reported by Koen D'Hondt
	<ripley@xs4all.nl> on 15 Oct 1998. allocate inital block from realloc.

1999-02-17  Elliot Lee  <sopwith@redhat.com>

	* glib.spec: Do --enable-debug=no for the .rpm's.

Wed Feb 17 17:04:06 1999  Tor Lillqvist  <tml@iki.fi>

	* config.h.win32: Must define HAVE_PTHREAD_GETSPECIFIC_POSIX.

Tue Feb 16 14:08:59 CST 1999 Shawn T. Amundson <amundson@gtk.org>

	* NEWS
	  README
	  INSTALL
	  config.h.win32
	  configure.in
	  glib.spec
	  glibconfig.h.win32
	  docs/glib-config.1: version=1.1.16 

	* Released GLib 1.1.16

1999-02-15  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib.h, glibconfig.h.win32, configure.in: Changed signature of
	all g_static_mutex_* functions to take a pointer rather than the
	struct itself. This is not an issue at the moment, because those
	funcs are really macros, but is it un'G'ish and might fall on our
	feet in the future.

Mon Feb 15 07:45:54 1999  Tim Janik  <timj@gtk.org>
