@@ -51,7 +51,9 @@
 #undef HAVE_LIMITS_H
 #undef HAVE_LONG_DOUBLE
 #undef HAVE_POLL
+#undef HAVE_PTHREAD_COND_TIMEDWAIT_POSIX
 #undef HAVE_PTHREAD_GETSPECIFIC_POSIX
+#undef HAVE_PTHREAD_MUTEX_TRYLOCK_POSIX
 #undef HAVE_PWD_H
 #undef HAVE_SYS_PARAM_H
 #undef HAVE_SYS_POLL_H
