@@ -1,3 +1,8 @@
+1999-03-03  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
+
+	* gthread-posix.c: Fixed broken mutex_trylock and slightly broken
+	cond_timed_wait functions.
+
 1999-02-15  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
 
 	* testgthread.c (test_mutexes): Use new signature of
